--- a/NoProblems/NoProblems.csproj
+++ b/NoProblems/NoProblems.csproj
@@ -16,12 +16,12 @@
 		<Configurations>Beta Debug;Beta Release;Stable Debug;Stable Release</Configurations>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)' == 'Stable Release' OR '$(Configuration)' == 'Stable Debug'">
-		<Version>2.1</Version>
+	<PropertyGroup>
+		<AssemblyVersion>2.0.0.0</AssemblyVersion>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)' == 'Beta Release' OR '$(Configuration)' == 'Beta Debug'">
-		<Version>2.0.0.0</Version>
+	<PropertyGroup Condition="'$(Configuration)' == 'Stable Release' OR '$(Configuration)' == 'Stable Debug'">
+		<AssemblyVersion>2.1</AssemblyVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Stable Release|AnyCPU'">
