--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /NoProblems/Properties/Localize.resx
-    translation: /NoProblems/Properties/Localize.%two_letters_code%.resx
+    translation: /NoProblems/Properties/Localize.%locale%.resx
