--- a/NoProblems/NoProblems.csproj
+++ b/NoProblems/NoProblems.csproj
@@ -17,7 +17,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<AssemblyVersion>2.0.0.0</AssemblyVersion>
+		<AssemblyVersion>2.0.0.3</AssemblyVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Stable Release' OR '$(Configuration)' == 'Stable Debug'">
@@ -55,7 +55,49 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <EmbeddedResource Remove="Properties\Localize.cs-CZ.resx" />
+	  <EmbeddedResource Remove="Properties\Localize.es-ES.resx" />
+	  <EmbeddedResource Remove="Properties\Localize.fr-FR.resx" />
+	  <EmbeddedResource Remove="Properties\Localize.ja-JP.resx" />
+	  <EmbeddedResource Remove="Properties\Localize.pl-PL.resx" />
+	  <EmbeddedResource Remove="Properties\Localize.pt-PT.resx" />
 	  <EmbeddedResource Remove="Properties\Localize.pt.resx" />
+	  <EmbeddedResource Remove="Properties\Localize.resx" />
+	  <EmbeddedResource Remove="Properties\Localize.ro-RO.resx" />
+	  <EmbeddedResource Remove="Properties\Localize.ru-RU.resx" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="Properties\Localize.cs-CZ.resx">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Include="Properties\Localize.es-ES.resx">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Include="Properties\Localize.fr-FR.resx">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Include="Properties\Localize.ja-JP.resx">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Include="Properties\Localize.pl-PL.resx">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Include="Properties\Localize.pt-PT.resx">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Include="Properties\Localize.resx">
+	    <Generator>LocalizeGenerator</Generator>
+	    <LastGenOutput>Localize.cs</LastGenOutput>
+	    <CustomToolNamespace>NoProblems</CustomToolNamespace>
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Include="Properties\Localize.ro-RO.resx">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Include="Properties\Localize.ru-RU.resx">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 
@@ -78,21 +120,13 @@
 		</Reference>
 	</ItemGroup>
 
-	<ItemGroup>
-		<Compile Update="Properties\Localize.Designer.cs">
-			<AutoGen>True</AutoGen>
-			<DesignTime>True</DesignTime>
-			<DependentUpon>Localize.resx</DependentUpon>
-		</Compile>
-	</ItemGroup>
-
 
 	<ItemGroup>
-		<EmbeddedResource Update="Properties\Localize.resx">
-			<Generator>PublicResXFileCodeGenerator</Generator>
-			<LastGenOutput>Localize.Designer.cs</LastGenOutput>
-			<CustomToolNamespace>NoProblems</CustomToolNamespace>
-		</EmbeddedResource>
+	  <Compile Update="Properties\Localize.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Localize.resx</DependentUpon>
+	  </Compile>
 	</ItemGroup>
 
 	<Import Project="..\ModsCommon\ModShared\ModsCommonShared.projitems" Label="Shared" />
@@ -108,11 +142,15 @@
 	<Import Project="..\ModsCommon\ColorsShared\ColorsShared.projitems" Label="Shared" />
 
 	<Import Project="..\ModsCommon\LocalizeShared\LocalizeShared.projitems" Label="Shared" />
-	<Import Project="..\ModsCommon\LocalizeShared\ru\LocalizeShared.ru.projitems" Label="Shared" />
-	<Import Project="..\ModsCommon\LocalizeShared\ja\LocalizeShared.ja.projitems" Label="Shared" />
-	<Import Project="..\ModsCommon\LocalizeShared\fr\LocalizeShared.fr.projitems" Label="Shared" />
-	<Import Project="..\ModsCommon\LocalizeShared\cs\LocalizeShared.cs.projitems" Label="Shared" />
-	<Import Project="..\ModsCommon\LocalizeShared\ro\LocalizeShared.ro.projitems" Label="Shared" />
+	<Import Project="..\ModsCommon\LocalizeShared\cs-CZ\LocalizeShared.cs-CZ.projitems" Label="Shared" />
+	<Import Project="..\ModsCommon\LocalizeShared\es-ES\LocalizeShared.es-ES.projitems" Label="Shared" />
+	<Import Project="..\ModsCommon\LocalizeShared\fr-FR\LocalizeShared.fr-FR.projitems" Label="Shared" />
+	<Import Project="..\ModsCommon\LocalizeShared\ja-JP\LocalizeShared.ja-JP.projitems" Label="Shared" />
+	<Import Project="..\ModsCommon\LocalizeShared\pl-PL\LocalizeShared.pl-PL.projitems" Label="Shared" />
+	<Import Project="..\ModsCommon\LocalizeShared\pt-PT\LocalizeShared.pt-PT.projitems" Label="Shared" />
+	<Import Project="..\ModsCommon\LocalizeShared\ro-RO\LocalizeShared.ro-RO.projitems" Label="Shared" />
+	<Import Project="..\ModsCommon\LocalizeShared\ru-RU\LocalizeShared.ru-RU.projitems" Label="Shared" />
+	<Import Project="..\ModsCommon\LocalizeShared\LocalizeManager\LocalizeManager.projitems" Label="Shared" />
 
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Stable Release' OR '$(Configuration)' == 'Stable Debug'">
@@ -136,6 +174,17 @@
 			<FilesToDelete Include="$(OutDir)*.pdb" />
 		</ItemGroup>
 		<Delete Files="@(FilesToDelete)" />
+
+		<ItemGroup>
+			<LocalizeToMove Include="$(OutDir)Properties\*.resx" />
+		</ItemGroup>
+		<Move SourceFiles="@(LocalizeToMove)" DestinationFiles="@(LocalizeToMove->'$(OutDir)Localize\%(Filename)%(Extension)')" />
+		<RemoveDir Directories="$(OutDir)Properties" />
+
+		<ItemGroup>
+			<CommonLocalizeToMove Include="$(OutDir)*.resx" />
+		</ItemGroup>
+		<Move SourceFiles="@(CommonLocalizeToMove)" DestinationFiles="@(CommonLocalizeToMove->'$(OutDir)Localize\%(Filename)%(Extension)')" />
 	</Target>
 
 	<Target Name="DeployToLocal" AfterTargets="PdbToMdb">
