--- a/NoProblems/NoProblems.csproj
+++ b/NoProblems/NoProblems.csproj
@@ -17,11 +17,11 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<AssemblyVersion>2.0.0.3</AssemblyVersion>
+		<AssemblyVersion>2.2.0.1</AssemblyVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Stable Release' OR '$(Configuration)' == 'Stable Debug'">
-		<AssemblyVersion>2.1.0.3</AssemblyVersion>
+		<AssemblyVersion>2.2</AssemblyVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Stable Release|AnyCPU'">
@@ -143,7 +143,6 @@
 	<Import Project="..\ModsCommon\DependencyShared\DependencyShared.projitems" Label="Shared" />
 	<Import Project="..\ModsCommon\SingletonShared\SingletonShared.projitems" Label="Shared" />
 	<Import Project="..\ModsCommon\LoggerShared\LoggerShared.projitems" Label="Shared" />
-	<Import Project="..\ModsCommon\AutoLayoutPanelShared\AutoLayoutPanelShared.projitems" Label="Shared" />
 	<Import Project="..\ModsCommon\SimpleMessageBoxShared\SimpleMessageBoxShared.projitems" Label="Shared" />
 	<Import Project="..\ModsCommon\WhatsNewMessageBoxShared\WhatsNewMessageBoxShared.projitems" Label="Shared" />
 	<Import Project="..\ModsCommon\MessageBoxShared\MessageBoxShared.projitems" Label="Shared" />
@@ -159,6 +158,7 @@
 	<Import Project="..\ModsCommon\LocalizeShared\ro-RO\LocalizeShared.ro-RO.projitems" Label="Shared" />
 	<Import Project="..\ModsCommon\LocalizeShared\ru-RU\LocalizeShared.ru-RU.projitems" Label="Shared" />
 	<Import Project="..\ModsCommon\LocalizeShared\LocalizeManager\LocalizeManager.projitems" Label="Shared" />
+	<Import Project="..\ModsCommon\MathExtension\MathExtension.projitems" Label="Shared" />
 
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Stable Release' OR '$(Configuration)' == 'Stable Debug'">
