--- a/NoProblems/NoProblems.csproj
+++ b/NoProblems/NoProblems.csproj
@@ -17,11 +17,11 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<AssemblyVersion>2.2.0.1</AssemblyVersion>
+		<AssemblyVersion>2.2.0.2</AssemblyVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Stable Release' OR '$(Configuration)' == 'Stable Debug'">
-		<AssemblyVersion>2.2</AssemblyVersion>
+		<AssemblyVersion>2.2.0.2</AssemblyVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Stable Release|AnyCPU'">
@@ -58,6 +58,7 @@
 	  <EmbeddedResource Remove="Properties\Localize.cs-CZ.resx" />
 	  <EmbeddedResource Remove="Properties\Localize.es-ES.resx" />
 	  <EmbeddedResource Remove="Properties\Localize.fr-FR.resx" />
+	  <EmbeddedResource Remove="Properties\Localize.id-ID.resx" />
 	  <EmbeddedResource Remove="Properties\Localize.ja-JP.resx" />
 	  <EmbeddedResource Remove="Properties\Localize.pl-PL.resx" />
 	  <EmbeddedResource Remove="Properties\Localize.pt-PT.resx" />
