--- a/NoProblems/NoProblems.csproj
+++ b/NoProblems/NoProblems.csproj
@@ -66,6 +66,9 @@
 	  <EmbeddedResource Remove="Properties\Localize.resx" />
 	  <EmbeddedResource Remove="Properties\Localize.ro-RO.resx" />
 	  <EmbeddedResource Remove="Properties\Localize.ru-RU.resx" />
+    <EmbeddedResource Remove="Properties\Localize.th-TH.resx" />
+    <EmbeddedResource Remove="Properties\Localize.uk-UA.resx" />
+    <EmbeddedResource Remove="Properties\Localize.vi-VN.resx" />
 	</ItemGroup>
 
 	<ItemGroup>
